--- a/index.html
+++ b/index.html
@@ -369,6 +369,7 @@
         <li><i class="fa-brands fa-x-twitter"></i></li>
         <li><i class="fa-brands fa-instagram"></i></li>
         <li><i class="fa-brands fa-tiktok"></i></li>
+        <li>Our Phone number: +213 1234567890</li>
       </div>
       <p>&copy; Copyright PIZZORINO.LLC, All rights reserved 2024.</p>
     </div>
