--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
           Mr. Krabs has collected quite a huge profit from Krusty Krabs
           restaurant. Still, as he's eager to get more money & become more &
           more rich; he decided to open a new specialized pizza restaurant :
-          <b>PIZZERINO</b>. <br /><br />
+          <b>PIZZORINO</b>. <br /><br />
           Surfing on the success of Krusty Krabs secret recipe, he also knew
           that a talented cook such Bob couldn't keep running both
-          <b>Pizzerino</b> & <b>Krusty Krabs</b>, so he invested on tech to make
+          <b>Pizzorino</b> & <b>Krusty Krabs</b>, so he invested on tech to make
           clones of Bob as staff for his new pizzeria business
           <span>thanks to plankton's lab</span>. <br /><br />
           We invite you to our newly opened pizzeria: <b>PIZZORINO</b> &
